k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oficina-ingress
  namespace: oficina-ns
  annotations:
    # O NGINX não precisa de permissões IAM no pod para funcionar
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /clientes
            pathType: Prefix
            backend:
              service:
                name: cliente-cliente-app-service # Corrigido
                port:
                  number: 80
          - path: /catalogo
            pathType: Prefix
            backend:
              service:
                name: catalogo-catalogo-app-service # Corrigido
                port:
                  number: 80
          - path: /orcamentos
            pathType: Prefix
            backend:
              service:
                name: orcamento-orcamento-app-service # Corrigido
                port:
                  number: 80
          - path: /ordens-servicos
            pathType: Prefix
            backend:
              service:
                name: ordem-servico-ordem-servico-app-service # Corrigido
                port:
                  number: 80
          - path: /pecas
            pathType: Prefix
            backend:
              service:
                name: catalogo-catalogo-app-service # Corrigido
                port:
                  number: 80
          - path: /servicos
            pathType: Prefix
            backend:
              service:
                name: catalogo-catalogo-app-service # Corrigido
                port:
                  number: 80
          - path: /pagamentos
            pathType: Prefix
            backend:
              service:
                name: pagamento-service
                port:
                  number: 80
